# skilltree

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  roadmap.json
.github/workflows/: test.yml
papers/: flat-vs-tree.md  skilltree-paper.md
papers/figures/: figure1_crossover.py
scripts/: update_site.py
site/: app.js  blog.html  blog.js  blog.json  data.json  index.html  style.css
src/skilltree/: __init__.py  cli.py  cohere.py  exchange.py  federation.py  forest.py  mapper.py  marketplace.py  materialize.py  model.py  registry.py  reports.py  search.py  validate.py
tests/: test_cohere.py  test_coords.py  test_emit_roundtrip.py  test_exchange.py  test_federation.py  test_folder_search.py  test_forest.py  test_glyph_search.py  test_mapper.py  test_marketplace.py  test_notifications.py  test_registry.py  test_reports.py  test_search.py  test_skilltree.py  test_summaries.py
