[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skilltree"
version = "0.2.1"
description = "A coordinate-addressed tree of agent skill dirs wired by Read-tool breadcrumbs, with programmatic validation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Isaac Wostrel-Rubin" }]
keywords = ["skills", "agents", "skill-tree", "claude", "progressive-disclosure", "coordinate-addressing"]
dependencies = ["click"]

[project.urls]
Homepage = "https://github.com/sancovp/skilltree"

[project.scripts]
skilltree = "skilltree.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
